[gd_scene load_steps=27 format=2]

[ext_resource path="res://title_screen/Title Screen.gd" type="Script" id=1]
[ext_resource path="res://FadeIn.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main Menu Resources/galaxy background.jpg" type="Texture" id=3]
[ext_resource path="res://Main Menu Resources/Zuice (RM).png" type="Texture" id=4]
[ext_resource path="res://Main Menu Resources/Haydies.png" type="Texture" id=5]
[ext_resource path="res://Main Menu Resources/Picydon.png" type="Texture" id=6]
[ext_resource path="res://title_screen/camera.gd" type="Script" id=7]
[ext_resource path="res://Main Menu Resources/Overlay1.png" type="Texture" id=8]
[ext_resource path="res://Main Menu Resources/apollotext.png" type="Texture" id=9]
[ext_resource path="res://title_screen/Buttons/NewGameBut.tscn" type="PackedScene" id=10]
[ext_resource path="res://Main Menu Resources/New Game - Unselected.png" type="Texture" id=11]
[ext_resource path="res://Main Menu Resources/New Game - Selected.png" type="Texture" id=12]
[ext_resource path="res://title_screen/Buttons/NewGameBut.gd" type="Script" id=13]
[ext_resource path="res://title_screen/Buttons/ContinueBut.tscn" type="PackedScene" id=14]
[ext_resource path="res://Main Menu Resources/Continue Game unselected.png" type="Texture" id=15]
[ext_resource path="res://Main Menu Resources/Continue Game Selected.png" type="Texture" id=16]
[ext_resource path="res://title_screen/Buttons/How To Play Button.tscn" type="PackedScene" id=17]
[ext_resource path="res://Main Menu Resources/How to PLay - Unselected.png" type="Texture" id=18]
[ext_resource path="res://Main Menu Resources/How to play - Selected.png" type="Texture" id=19]
[ext_resource path="res://title_screen/Buttons/SettingsBut.tscn" type="PackedScene" id=20]
[ext_resource path="res://Main Menu Resources/Settings - Unselected.png" type="Texture" id=21]
[ext_resource path="res://Main Menu Resources/Settings selected.png" type="Texture" id=22]
[ext_resource path="res://Main Menu Resources/Quit Unselected.png" type="Texture" id=23]
[ext_resource path="res://Main Menu Resources/Quit Selected.png" type="Texture" id=24]
[ext_resource path="res://title_screen/Quit.gd" type="Script" id=25]
[ext_resource path="res://Main Menu Resources/Apollo15Intro.ogv" type="VideoStream" id=26]

[node name="Title Screen" type="Control" index="0"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="FadeIn" parent="." index="0" instance=ExtResource( 2 )]

visible = false
margin_right = 1457.0
margin_bottom = 119.0

[node name="parallax_background" type="ParallaxBackground" parent="." index="1"]

layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
scroll_offset = Vector2( 0, 0 )
scroll_base_offset = Vector2( 0, 0 )
scroll_base_scale = Vector2( 1, 1 )
scroll_limit_begin = Vector2( 0, 0 )
scroll_limit_end = Vector2( 0, 0 )
scroll_ignore_camera_zoom = false

[node name="backgroundLayer" type="ParallaxLayer" parent="parallax_background" index="0"]

editor/display_folded = true
motion_scale = Vector2( 1, 1 )
motion_offset = Vector2( 0, 0 )
motion_mirroring = Vector2( 3839, 0 )
_sections_unfolded = [ "Motion" ]

[node name="galaxy background" type="Sprite" parent="parallax_background/backgroundLayer" index="0"]

texture = ExtResource( 3 )
centered = false
_sections_unfolded = [ "Animation", "Offset", "Region" ]

[node name="Zuice" type="ParallaxLayer" parent="parallax_background" index="1"]

editor/display_folded = true
motion_scale = Vector2( 3, 1 )
motion_offset = Vector2( 0, 0 )
motion_mirroring = Vector2( 3839, 0 )
_sections_unfolded = [ "Motion" ]

[node name="zuice planet" type="Sprite" parent="parallax_background/Zuice" index="0"]

position = Vector2( 2591.92, 584.215 )
scale = Vector2( 1.19078, 1.14029 )
texture = ExtResource( 4 )

[node name="Haydies" type="ParallaxLayer" parent="parallax_background" index="2"]

editor/display_folded = true
motion_scale = Vector2( 2, 1 )
motion_offset = Vector2( 0, 0 )
motion_mirroring = Vector2( 3839, 0 )
_sections_unfolded = [ "Motion" ]

[node name="Sprite" type="Sprite" parent="parallax_background/Haydies" index="0"]

position = Vector2( 1900.63, 288.684 )
scale = Vector2( 0.939233, 0.89682 )
texture = ExtResource( 5 )

[node name="Picydon" type="ParallaxLayer" parent="parallax_background" index="3"]

editor/display_folded = true
motion_scale = Vector2( 1.5, 1 )
motion_offset = Vector2( 0, 0 )
motion_mirroring = Vector2( 3839, 0 )
_sections_unfolded = [ "Motion" ]

[node name="Sprite" type="Sprite" parent="parallax_background/Picydon" index="0"]

position = Vector2( 1315.89, 896.586 )
scale = Vector2( 0.652977, 0.636787 )
texture = ExtResource( 6 )

[node name="camera" type="Camera2D" parent="." index="2"]

anchor_mode = 0
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
script = ExtResource( 7 )

[node name="Canvas_Menu" type="CanvasLayer" parent="." index="3"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Title_Overlay" type="Sprite" parent="Canvas_Menu" index="0"]

position = Vector2( 922.897, 180.076 )
scale = Vector2( 0.615915, 0.211897 )
texture = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="Canvas_Menu" index="1"]

position = Vector2( 919.757, 157.303 )
texture = ExtResource( 9 )

[node name="Overlay2" type="Sprite" parent="Canvas_Menu" index="2"]

position = Vector2( 215.974, 541.352 )
scale = Vector2( 0.224794, 0.255767 )
texture = ExtResource( 8 )

[node name="Menu" type="VBoxContainer" parent="Canvas_Menu" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 15.0
margin_right = 1853.0
margin_bottom = 1083.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="CenterRow" type="HBoxContainer" parent="Canvas_Menu/Menu" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 3758.0
margin_bottom = 1083.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Margin", "Size Flags" ]

[node name="MainButtons" type="VBoxContainer" parent="Canvas_Menu/Menu/CenterRow" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 3758.0
margin_bottom = 1083.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16
alignment = 1
_sections_unfolded = [ "Anchor", "Size Flags", "custom_constants" ]

[node name="NewGameBut" parent="Canvas_Menu/Menu/CenterRow/MainButtons" index="0" instance=ExtResource( 10 )]

margin_top = 477.0
margin_right = 3758.0
margin_bottom = 509.0
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 12 )
script = ExtResource( 13 )
scene_to_load = null

[node name="ContinueBut" parent="Canvas_Menu/Menu/CenterRow/MainButtons" index="1" instance=ExtResource( 14 )]

visible = false
margin_top = 501.0
margin_right = 3758.0
margin_bottom = 533.0
texture_normal = ExtResource( 15 )
texture_hover = ExtResource( 16 )
scene_to_load = ""

[node name="loadTimer" type="Timer" parent="Canvas_Menu/Menu/CenterRow/MainButtons/ContinueBut" index="0"]

process_mode = 0
wait_time = 10.0
one_shot = true
autostart = true

[node name="How To Play Button" parent="Canvas_Menu/Menu/CenterRow/MainButtons" index="2" instance=ExtResource( 17 )]

margin_top = 525.0
margin_right = 3758.0
margin_bottom = 557.0
texture_normal = ExtResource( 18 )
texture_hover = ExtResource( 19 )
scene_to_load = "res://game/HowToPlay.tscn"

[node name="SettingsBut" parent="Canvas_Menu/Menu/CenterRow/MainButtons" index="3" instance=ExtResource( 20 )]

visible = false
margin_top = 573.0
margin_right = 1902.0
margin_bottom = 605.0
texture_normal = ExtResource( 21 )
texture_hover = ExtResource( 22 )

[node name="Quit" type="TextureButton" parent="Canvas_Menu/Menu/CenterRow/MainButtons" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 573.0
margin_right = 3758.0
margin_bottom = 605.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 23 )
texture_hover = ExtResource( 24 )
script = ExtResource( 25 )
_sections_unfolded = [ "Textures" ]
scene_to_load = "Null"

[node name="intro" type="VideoPlayer" parent="." index="4"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = -5.0
margin_right = 2010.0
margin_bottom = 1084.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
audio_track = 0
stream = ExtResource( 26 )
volume_db = 0.0
autoplay = false
paused = false
expand = true
buffering_msec = 500
bus = "Master"
_sections_unfolded = [ "Rect" ]

[connection signal="fade_finished" from="FadeIn" to="." method="_on_TransitionFX_fade_finished"]

[connection signal="pressed" from="Canvas_Menu/Menu/CenterRow/MainButtons/NewGameBut" to="Canvas_Menu/Menu/CenterRow/MainButtons/NewGameBut" method="_on_NewGameBut_pressed"]

[connection signal="pressed" from="Canvas_Menu/Menu/CenterRow/MainButtons/ContinueBut" to="Canvas_Menu/Menu/CenterRow/MainButtons/ContinueBut" method="_on_ContinueBut_pressed"]

[connection signal="timeout" from="Canvas_Menu/Menu/CenterRow/MainButtons/ContinueBut/loadTimer" to="Canvas_Menu/Menu/CenterRow/MainButtons/ContinueBut" method="_on_Timer_timeout"]

[connection signal="pressed" from="Canvas_Menu/Menu/CenterRow/MainButtons/Quit" to="Canvas_Menu/Menu/CenterRow/MainButtons/Quit" method="_on_Quit_pressed"]


